--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,12 @@
     {
       "src": "logo512.png",
       "type": "image/png",
-      "sizes": "512x512",
+      "sizes": "512x512"
+    },
+    {
+      "src": "logo1024.png",
+      "type": "image/png",
+      "sizes": "1024x1024",
       "purpose": "any"
     },
     {
